- added support for Debian Stretch - added "grub_disable_pnin" setting, to optionally disable "Predictable Network Interface Names" - added "grub_enable_timeout" setting, to allow showing the grub menu for debugging - updated tools.py, added more strict error checking and useful exception messages - updated workspace pathways for Virtualbox Jessie and Stretch manifests

--- a/manifests/examples/virtualbox/stretch-vagrant.yml
+++ b/manifests/examples/virtualbox/stretch-vagrant.yml
@@ -4,15 +4,16 @@ provider:
   name: virtualbox
   guest_additions: /usr/share/virtualbox/VBoxGuestAdditions.iso
 bootstrapper:
-  workspace: /target/jessie
+  workspace: /target/stretch
 system:
-  release: jessie
+  release: stretch
   architecture: amd64
   bootloader: grub
   charmap: UTF-8
   hostname: localhost
   locale: en_US
   timezone: UTC
+  grub_disable_pnin: true
 volume:
   backing: vmdk
   partitions:
